--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,1 +1,36 @@
-<h1>Restaurants</h1>
+<div class="container">
+  <p style="color: green"><%= notice %></p>
+
+  <h1>Restaurants</h1>
+
+<hr>
+
+  <div id="restaurants">
+    <% @restaurants.each do |restaurant| %>
+      <p>
+        <strong>Name:</strong>
+        <%= restaurant.name %>
+      </p>
+
+      <p>
+        <strong>Address:</strong>
+        <%= restaurant.address %>
+      </p>
+
+      <p>
+        <strong>Phone Number:</strong>
+        <%= restaurant.phone_number %>
+      </p>
+
+      <p>
+        <strong>Category:</strong>
+        <%= restaurant.category %>
+      </p>
+      <p>
+        <%= link_to "Show this restaurant", restaurant %>
+      </p>
+    <% end %>
+  </div>
+
+
+</div>
