--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,1 +1,11 @@
-<h1>New Restaurant</h1>
+<div class="container">
+  <h1>New Restaurant</h1>
+
+  <%= render "form", restaurant: @restaurant %>
+
+  <br>
+
+  <div>
+    <%= link_to "Back to restaurants", restaurants_path %>
+  </div>
+</div>
