--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -4,12 +4,22 @@
   <%= render @restaurant %>
 </div>
 <hr>
+<div class="container">
+  <h3><strong>Reviews</strong></h3>
 
-<p><strong>Reviews</strong></p>
-<p><%= link_to "add review", new_restaurant_review_path(@restaurant) %></p>
-<ul class="list-group">
-  <% @restaurant.reviews.each do |review| %>
-    <li class="list-group-item"><%= review.content %> <p>Rating: <%= review.rating %></p>
-    </li>
+  <ul class="list-group">
+    <% @restaurant.reviews.each do |review| %>
+      <li class="list-group-item"><%= review.content %> <p>Rating: <%= review.rating %></p>
+      </li>
+    <% end %>
+  </ul>
+</div>
+
+<div class="container">
+  <h3>New review</h3>
+  <%= simple_form_for [@restaurant, @review] do |f| %>
+    <%= f.input :content %>
+    <%= f.input :rating, :collection => %w[0 1 2 3 4 5] %>
+    <%= f.submit "Submit review", class: "btn btn-primary" %>
   <% end %>
-</ul>
+</div>
